<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewAirlineFlightActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-16dp">

        <TextView
            android:id="@+id/provide_airline_flight_title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="668dp"
            android:text="@string/provide_airline_details_title"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="115dp"/>

        <TextView
            android:id="@+id/airline_name_title"
            android:layout_width="131dp"
            android:layout_height="57dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-9dp"
            android:layout_marginBottom="577dp"
            android:text="@string/airline_name_title"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="194dp"/>

        <EditText
            android:id="@+id/airline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="63dp"
            android:layout_marginBottom="604dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/flight_number_title"
            android:layout_width="159dp"
            android:layout_height="55dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="261dp"
            android:layout_marginBottom="519dp"
            android:text="@string/flight_number_title"/>

        <EditText
            android:id="@+id/flight_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="54dp"
            android:layout_marginBottom="548dp"
            android:ems="10"
            android:inputType="number"/>

        <TextView
            android:id="@+id/src_airport_code_title"
            android:layout_width="139dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="271dp"
            android:layout_marginBottom="485dp"
            android:text="@string/src_airport_code_title"/>

        <EditText
            android:id="@+id/src_airport_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="476dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/departure_title"
            android:layout_width="102dp"
            android:layout_height="67dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="293dp"
            android:layout_marginBottom="350dp"
            android:text="@string/departure_title"/>

        <EditText
            android:id="@+id/departure_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="77dp"
            android:layout_marginBottom="401dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/departure_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="400dp"
            android:text="@string/select_date"/>

        <EditText
            android:id="@+id/departure_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="76dp"
            android:layout_marginBottom="345dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/departure_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="346dp"
            android:text="@string/select_time"/>

        <TextView
            android:id="@+id/dest_airport_code_title"
            android:layout_width="143dp"
            android:layout_height="53dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="252dp"
            android:layout_marginBottom="259dp"
            android:text="@string/dest_airport_code_title"/>

        <EditText
            android:id="@+id/dest_airport_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="60dp"
            android:layout_marginBottom="273dp"
            android:ems="10"
            android:inputType="textPersonName"/>

        <TextView
            android:id="@+id/arrival_title"
            android:layout_width="89dp"
            android:layout_height="74dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="306dp"
            android:layout_marginBottom="127dp"
            android:text="@string/arrival_title"/>

        <EditText
            android:id="@+id/arrival_date_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="94dp"
            android:layout_marginBottom="185dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/arrival_date_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="185dp"
            android:text="@string/select_date" />

        <EditText
            android:id="@+id/arrival_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="97dp"
            android:layout_marginBottom="136dp"
            android:ems="10"
            android:enabled="false"
            android:inputType="textPersonName"/>

        <Button
            android:id="@+id/arrival_time_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="19dp"
            android:layout_marginBottom="137dp"
            android:text="@string/select_time"/>

        <Button
            android:id="@+id/create_airline_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="624dp"
            android:layout_marginEnd="145dp"
            android:layout_marginBottom="59dp"
            android:onClick="createAirline"
            android:text="@string/create_btn"/>
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>