<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchAirlineAndFlightActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="-196dp">

        <TextView
            android:id="@+id/search_airline_flight_title"
            android:layout_width="220dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="175dp"
            android:layout_marginBottom="668dp"
            android:text="@string/search_airline_flights_title"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="115dp" />

        <TextView
            android:id="@+id/search_airline_name_title"
            android:layout_width="131dp"
            android:layout_height="57dp"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="-9dp"
            android:layout_marginBottom="562dp"
            android:text="@string/airline_name_search"
            tools:layout_editor_absoluteX="41dp"
            tools:layout_editor_absoluteY="194dp" />

        <EditText
            android:id="@+id/search_airline_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="586dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/search_src_airport_code_title"
            android:layout_width="141dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="154dp"
            android:layout_marginEnd="254dp"
            android:layout_marginBottom="510dp"
            android:text="@string/source_airport_code_search" />

        <EditText
            android:id="@+id/search_src_airport_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="25dp"
            android:layout_marginBottom="529dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <TextView
            android:id="@+id/search_dest_airport_code_title"
            android:layout_width="163dp"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="223dp"
            android:layout_marginEnd="232dp"
            android:layout_marginBottom="425dp"
            android:text="@string/destination_airport_code_search" />

        <EditText
            android:id="@+id/search_dest_airport_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="26dp"
            android:layout_marginBottom="464dp"
            android:ems="10"
            android:inputType="textPersonName" />

        <Button
            android:id="@+id/search_airline_flight_btn"
            android:layout_width="127dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentBottom="true"
            android:layout_marginEnd="124dp"
            android:layout_marginBottom="361dp"
            android:onClick="searchAirlineAndFlights"
            android:text="@string/search_btn" />
    </RelativeLayout>
</androidx.constraintlayout.widget.ConstraintLayout>